bug 312104: Parse entities in textareas like we used to (allowing values > 255 with no terminating semicolon). r=bzbarsky sr=brendan